force-app/main/default/objects/Channel_item__c/Channel_item__c.object-meta.xml
<CustomObject>
    <label>Channel item</label>
    <nameField>
        <label>Channnel item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>