force-app/main/default/objects/Channel_item__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <displayFormat>CH{00000}</displayFormat>
    <label>Channel Code</label>
    <type>AutoNumber</type>
</CustomField>