force-app/main/default/objects/Channel_item__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description>后端用，值同Name</description>
    <label>Channel Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>