force-app/main/default/objects/Channel_item__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>text(SBU__c)</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>